# web-porto

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  clan.nix  flake.nix  index.html  inventory.json
.github/workflows/: build.yml
content/: about.toml  chat_system_prompt.toml  experience.toml  faq.toml  papers.toml  projects.toml  skills.toml
crates/app/: Cargo.toml
crates/app/src/: data.rs  faq_engine.rs  main.rs
crates/app/src/canvas/: force_graph.rs  mod.rs  particles.rs
crates/app/src/components/: cursor.rs  mod.rs  navbar.rs  timeline.rs
crates/app/src/pages/: chat.rs  home.rs  paper_detail.rs  papers.rs  project_detail.rs  projects.rs
crates/app/src/styles/: global.rs  theme.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
machines/porto/: configuration.nix  disko.nix  facter.json
nix/: module.nix
porto-app/: Cargo.toml
porto-app/src/: data.rs  faq_engine.rs
porto-app/src/canvas/: force_graph.rs  hero_zoom.rs  mod.rs  particles.rs  scroll_reveal.rs
porto-app/src/components/: cursor.rs  navbar.rs
porto-app/src/pages/: chat.rs  mod.rs  papers.rs  project_detail.rs  projects.rs
porto-app/src/styles/: global.rs  mod.rs  theme.rs
porto-shared/: Cargo.toml
public/js/: embedding-engine.js
