[package]
name = "porto-app"
version.workspace = true
edition.workspace = true

[dependencies]
porto-shared = { path = "../porto-shared" }
dioxus = { version = "0.7", features = ["web", "router"] }
serde.workspace = true
toml.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "KeyboardEvent", "DomRect", "console", "HtmlElement", "CssStyleDeclaration", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "DomTokenList", "NodeList", "Element"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
serde_json = "1"
log = "0.4"
wasm-logger = "0.2"
