[package]
name = "web-porto-app"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
dioxus = { version = "0.7", features = ["web", "router"] }
serde.workspace = true
toml.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "DomRect", "console", "HtmlElement", "CssStyleDeclaration", "IntersectionObserver", "IntersectionObserverEntry", "IntersectionObserverInit", "DomTokenList", "NodeList", "Element"] }
js-sys = "0.3"
serde_json = "1"
log = "0.4"
wasm-logger = "0.2"
